# scb-research-agent

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
deploy/base/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
deploy/kind/: kind-config.yaml
deploy/kind/manifests/: kustomization.yaml
deploy/kind/scripts/: deploy.sh  setup.sh  teardown.sh
deploy/turtle/manifests/: ingress.yaml  kustomization.yaml
deploy/turtle/scripts/: deploy.sh  teardown.sh
docs/: 01-overview.md  02-scb-data.md  03-agent-flow.md  04-session-model.md  05-api-usage.md  06-prerequisites.md  implementation-plan.md  technical-design.md
docs/deployment/: compose.md  k8s.md  kind.md  turtle.md
docs/infrastructure/: proxy.md
examples/: README.md  sample-questions.txt
src/research_agent/: agent.py  config.py  main.py  metadata_parser.py  models.py  prompts.py  result_parser.py  scb_api.py  scb_metadata.py  scb_query_builder.py  schema.py  session_store.py
tests/: conftest.py  test_agent_flow.py  test_api_endpoints.py  test_scb_api.py  test_session_store.py
